lightbox: fixes title and description alignment

--- a/components/lightbox/stylesheets/lightbox.styl
+++ b/components/lightbox/stylesheets/lightbox.styl
@@ -149,10 +149,11 @@ body.is-lightbox
     line-height 1.6em
     text-align left
     margin-bottom 5px
+    padding-left 6px
     
     .placeholder
       font-weight normal
-      padding 0 0 0 5px
+      padding 0 0 0 6px
 
 .lightbox__content__description, .lightbox__content__source
   width 90%
@@ -161,8 +162,7 @@ body.is-lightbox
   p
     position relative
     text-align left
-    width 90%
-    margin auto
+    width 100%
     font-size s_caption + 1
     font-weight normal
     line-height 1.5em
